kubernetes/clusters/live/config/media/jellyfin-internal.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-internal
  namespace: media
spec:
  parentRefs:
    - name: internal
      namespace: istio-gateway
  hostnames:
    - "jellyfin.${internal_domain}"
  rules:
    - backendRefs:
        - name: jellyfin
          port: 8096
