kubernetes/clusters/live/config/media/jfa-go-internal.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jfa-go-internal
  namespace: media
spec:
  parentRefs:
    - name: internal
      namespace: istio-gateway
  hostnames:
    - "jfa-go.${internal_domain}"
  rules:
    - backendRefs:
        - name: jfa-go
          port: 8056
