kubernetes/clusters/live/config/media/qbittorrent-internal.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent-internal
  namespace: media
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "qBittorrent"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "qbittorrent.svg"
    gethomepage.dev/widget.type: "qbittorrent"
    gethomepage.dev/widget.url: "http://qbittorrent.media.svc:8080"
spec:
  parentRefs:
    - name: internal
      namespace: istio-gateway
  hostnames:
    - "qbittorrent.${internal_domain}"
  rules:
    - backendRefs:
        - name: qbittorrent
          port: 8080
