kubernetes/clusters/live/config/media/sabnzbd-internal.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd-internal
  namespace: media
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "SABnzbd"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "sabnzbd.svg"
    gethomepage.dev/widget.type: "sabnzbd"
    gethomepage.dev/widget.url: "http://sabnzbd.media.svc:8080"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=sabnzbd"
spec:
  parentRefs:
    - name: internal
      namespace: istio-gateway
  hostnames:
    - "sabnzbd.${internal_domain}"
  rules:
    - backendRefs:
        - name: sabnzbd
          port: 8080
