kubernetes/clusters/live/config/media/tdarr-internal.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tdarr-internal
  namespace: media
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Tdarr"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "tdarr.svg"
    gethomepage.dev/widget.type: "tdarr"
    gethomepage.dev/widget.url: "http://tdarr.media.svc:8265"
spec:
  parentRefs:
    - name: internal
      namespace: istio-gateway
  hostnames:
    - "tdarr.${internal_domain}"
  rules:
    - backendRefs:
        - name: tdarr
          port: 8265
